app/frontend/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-count-front
  namespace: app
  labels:
    app.kubernetes.io/name: full-count-front
    app.kubernetes.io/part-of: full-count
spec:
  ingressClassName: nginx
  rules:
    - host: PLACEHOLDER_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: full-count-front
                port:
                  number: 80
